<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.alberto.a3line.screens.newuser.viewmodel.NewUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.newuser.view.NewUserActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:context=".screens.details.view.DetailsActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:cardBackgroundColor="@color/teal_200">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_img"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_user"
                            app:civ_border_color="@color/black"
                            app:civ_border_width="2dp" />

                        <ImageView
                            android:id="@+id/camera"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@id/profile_img"
                            android:layout_alignBottom="@+id/profile_img"
                            android:contentDescription="@string/icon_desc"
                            android:src="@drawable/camera" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/md"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        app:error="@{ viewModel.nameError }">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={ viewModel.name }" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/username_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sm"
                        android:hint="@string/username"
                        app:error="@{ viewModel.usernameError }">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={ viewModel.username }" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sm"
                        android:hint="@string/email"
                        app:error="@{ viewModel.emailError }">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={ viewModel.email }" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/address_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sm"
                        android:hint="@string/user_address"
                        app:error="@{ viewModel.addressError }">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={ viewModel.address }" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_number_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sm"
                        android:hint="@string/phone_number"
                        app:error="@{ viewModel.phoneNumberError }">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_number_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={ viewModel.phoneNumber }" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/company_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:error="@{ viewModel.companyError }"
                        android:layout_marginTop="@dimen/sm"
                        android:hint="@string/company">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/company_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={ viewModel.company }" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save_user"
                        android:layout_width="@dimen/max_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/sm"
                        android:text="@string/save"
                        android:textAllCaps="false" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>